[gd_scene load_steps=7 format=3 uid="uid://d0cdmiiyjhdjd"]

[ext_resource type="Script" uid="uid://bdleug2vch613" path="res://src/ui/game/game.gd" id="1_n8ugx"]
[ext_resource type="PackedScene" uid="uid://cr2ovoap8nvfh" path="res://src/ui/license/license.tscn" id="2_o3acu"]
[ext_resource type="PackedScene" uid="uid://dmq3dmhygcbqv" path="res://src/ui/credits/credits.tscn" id="3_o8q35"]
[ext_resource type="PackedScene" uid="uid://bwl7xvxblhy6c" path="res://src/ui/popup/popup.tscn" id="4_t67ik"]
[ext_resource type="PackedScene" uid="uid://kfgkpdj0exlx" path="res://src/ui/dead/dead.tscn" id="5_o8q35"]
[ext_resource type="PackedScene" uid="uid://f3o1cwg8v5w5" path="res://src/ui/start/start.tscn" id="6_t67ik"]

[node name="game" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8ugx")
start_level_scene = ExtResource("6_t67ik")

[node name="music" type="AudioStreamPlayer" parent="."]

[node name="snd" type="AudioStreamPlayer" parent="."]

[node name="snd_start" type="AudioStreamPlayer" parent="."]

[node name="snd_nav" type="AudioStreamPlayer" parent="."]

[node name="snd_resume" type="AudioStreamPlayer" parent="."]

[node name="snd_pause" type="AudioStreamPlayer" parent="."]

[node name="snd_game" type="AudioStreamPlayer" parent="."]

[node name="snd_back" type="AudioStreamPlayer" parent="."]

[node name="snd_exit" type="AudioStreamPlayer" parent="."]

[node name="snd_popup" type="AudioStreamPlayer" parent="."]

[node name="center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="PanelContainer" parent="center"]
layout_mode = 2

[node name="margin" type="MarginContainer" parent="center/panel"]
layout_mode = 2

[node name="tabs" type="TabContainer" parent="center/panel/margin"]
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="main" type="VBoxContainer" parent="center/panel/margin/tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="resume_game" type="Button" parent="center/panel/margin/tabs/main"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
text = "Resume"

[node name="start_menu" type="Button" parent="center/panel/margin/tabs/main"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
text = "Start Menu"

[node name="grid" type="GridContainer" parent="center/panel/margin/tabs/main"]
layout_mode = 2
columns = 2

[node name="license" type="Button" parent="center/panel/margin/tabs/main/grid"]
layout_mode = 2
text = "License"

[node name="credits" type="Button" parent="center/panel/margin/tabs/main/grid"]
layout_mode = 2
text = "Credits"

[node name="exit" type="Button" parent="center/panel/margin/tabs/main"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../resume_game")
text = "Exit Game"

[node name="license" parent="center/panel/margin/tabs" instance=ExtResource("2_o3acu")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="credits" parent="center/panel/margin/tabs" instance=ExtResource("3_o8q35")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="popup" parent="center/panel/margin/tabs" instance=ExtResource("4_t67ik")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="dead" parent="center/panel/margin/tabs" node_paths=PackedStringArray("tab", "popup") instance=ExtResource("5_o8q35")]
visible = false
layout_mode = 2
start_level_scene = ExtResource("6_t67ik")
tab = NodePath("..")
popup = NodePath("../popup")
metadata/_tab_index = 4

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="draw" from="center/panel/margin/tabs/main" to="." method="_on_main_draw"]
[connection signal="focus_entered" from="center/panel/margin/tabs/main/resume_game" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/main/resume_game" to="." method="_on_resume_game_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/main/start_menu" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/main/start_menu" to="." method="_on_start_menu_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/main/grid/license" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/main/grid/license" to="." method="_on_license_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/main/grid/credits" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/main/grid/credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/main/exit" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/main/exit" to="." method="_on_exit_pressed"]
[connection signal="back_pressed" from="center/panel/margin/tabs/license" to="." method="_on_back_pressed"]
[connection signal="subcontrol_focused" from="center/panel/margin/tabs/license" to="." method="_on_focus_entered"]
[connection signal="back_pressed" from="center/panel/margin/tabs/credits" to="." method="_on_back_pressed"]
[connection signal="subcontrol_focused" from="center/panel/margin/tabs/credits" to="." method="_on_focus_entered"]
[connection signal="subcontrol_focused" from="center/panel/margin/tabs/popup" to="." method="_on_focus_entered"]
[connection signal="subcontrol_focused" from="center/panel/margin/tabs/dead" to="." method="_on_focus_entered"]
